--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
   <div class="card-inner">
     <div class="front">
-      <img src="/front.jpg" alt="Front">
+      <img src="https://drive.google.com/file/d/1W0juZqj5tayAcsbmtaOLPizKprs_YxSd/view?usp=drive_link" alt="Front">
       <div class="card-content">
       <p>Hola, soy un FrontEnd Developer estudiando para ser Programador Full Web Stack 
         <br></p>
@@ -21,7 +21,7 @@
     </div>
 </div>
     <div class="back">
-        <img src="/back.jpg" alt="Back">
+        <img src="https://drive.google.com/file/d/1CvsoncbXXnyxWt3319QLtZbyoAEKvX-8/view?usp=drive_link" alt="Back">
       <div class="card-content">
       <h3>Redes Sociales</h3>
       <ul>
