--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
   <div class="card-inner">
     <div class="front">
-      <img src="https://imageup.me/images/5b23e44e-13aa-4951-a9e9-ef969aa90a80.jpeg" alt="Front">
+      <img src="front.jpg" alt="Front">
       <div class="card-content">
       <p>Hola, soy un FrontEnd Developer estudiando para ser Programador Full Web Stack 
         <br></p>
@@ -21,7 +21,7 @@
     </div>
 </div>
     <div class="back">
-        <img src="https://uploadnow.io/files/kjNmZ65" alt="Back">
+        <img src="back.jpg" alt="Back">
       <div class="card-content">
       <h3>Redes Sociales</h3>
       <ul>
