--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 </div>
     <div class="back">
-        <img src="/back.jpg" alt="Back">
+        <img src="back.jpg" alt="Back">
       <div class="card-content">
       <h3>Redes Sociales</h3>
       <ul>
